<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Main" >

   	<LinearLayout 
   	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
   	    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:text="@string/average_time_label" />
    <TextView
        android:id="@+id/avg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center" />
   	</LinearLayout> 	
   	 <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
    <Button
        android:id="@+id/get_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_time"
         />
    <Button
        android:id="@+id/inflate_db"
        android:text="@string/inflate_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout 
   	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
   	    >

        <Button
            android:id="@+id/insert_time"
            android:text="@string/insert_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <EditText 
        android:inputType="text"
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
   	</LinearLayout>
   	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/start_timer"
            android:text="@string/start_label"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/stop_timer"
            android:text="@string/stop_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
   	<TextView
   	    android:id="@+id/error"
   	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
   	
</LinearLayout>